--- a/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
+++ b/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
@@ -7584,44 +7584,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results DataFrame:\n",
-      "      Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
-      "1271         4.1      -1.0      3.091593       23.414255          34.0   \n",
-      "1230         4.0      -1.0      2.946080       21.945895          34.0   \n",
-      "1107         3.7      -1.0      2.871177       20.516401          34.0   \n",
-      "1189         3.9      -1.0      2.791610       20.447534          34.0   \n",
-      "1312         4.2      -1.0      2.770723       21.448307          32.0   \n",
-      "...          ...       ...           ...             ...           ...   \n",
-      "365          1.8      -4.7     -4.983074      -31.032555          42.0   \n",
-      "366          1.8      -4.8     -4.993516      -31.232555          42.0   \n",
-      "367          1.8      -4.9     -5.003492      -31.432555          42.0   \n",
-      "359          1.8      -4.1     -5.089064      -31.755381          42.0   \n",
-      "360          1.8      -4.2     -5.115205      -32.155381          42.0   \n",
-      "\n",
-      "      Profit/Loss Ratio  \n",
-      "1271           4.100000  \n",
-      "1230           4.000000  \n",
-      "1107           3.700000  \n",
-      "1189           3.900000  \n",
-      "1312           4.200000  \n",
-      "...                 ...  \n",
-      "365            0.382979  \n",
-      "366            0.375000  \n",
-      "367            0.367347  \n",
-      "359            0.439024  \n",
-      "360            0.428571  \n",
-      "\n",
-      "[1681 rows x 6 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -7640,7 +7605,7 @@
     "        df_capped = pnl_capping(df_backtest_recap_separated, profit_cap=profit_cap, loss_cap=loss_cap)\n",
     "        \n",
     "        # Calculate metrics\n",
-    "        positions_df = get_positions(df_capped,position_selection=1) # 1 for long, -1 for short\n",
+    "        positions_df = get_positions(df_capped,position_selection=-1) # 1 for long, -1 for short\n",
     "        metrics_df, _ = calculate_metrics(positions_df)\n",
     "        \n",
     "        # Extract metrics\n",
@@ -7679,7 +7644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -7688,7 +7653,7 @@
      "text": [
       "\n",
       "Best Combination for Sharpe Ratio:\n",
-      "Profit Cap: 4.5000000000000036, Loss Cap: -2.100000000000001, Sharpe Ratio: 0.9638340992833716, Cumulative PnL: 10.179614222204487, Win Rate (%): 39.62264150943396, Profit/Loss Ratio: 2.1428571428571437\n"
+      "Profit Cap: 4.100000000000003, Loss Cap: -1.0, Sharpe Ratio: 3.091593320254958, Cumulative PnL: 23.414255030004764, Win Rate (%): 34.0, Profit/Loss Ratio: 4.100000000000003\n"
      ]
     }
    ],
@@ -7704,7 +7669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -7713,7 +7678,7 @@
      "text": [
       "\n",
       "Best Combination for Win Rate:\n",
-      "Profit Cap: 1.0, Loss Cap: -3.9000000000000026, Sharpe Ratio: -5.072162890900111, Cumulative PnL: -30.752208550691723, Win Rate (%): 58.490566037735846, Profit/Loss Ratio: 0.2564102564102562\n"
+      "Profit Cap: 1.1, Loss Cap: -2.7000000000000015, Sharpe Ratio: -0.44769884623643497, Cumulative PnL: -1.2922417312631325, Win Rate (%): 68.0, Profit/Loss Ratio: 0.4074074074074072\n"
      ]
     }
    ],
@@ -7728,7 +7693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -7737,7 +7702,7 @@
      "text": [
       "\n",
       "Best Combination for Profit/Loss Ratio:\n",
-      "Profit Cap: 5.0000000000000036, Loss Cap: -1.0, Sharpe Ratio: -0.25377376161726145, Cumulative PnL: -1.0293811455251116, Win Rate (%): 20.754716981132077, Profit/Loss Ratio: 5.0000000000000036\n"
+      "Profit Cap: 5.0000000000000036, Loss Cap: -1.0, Sharpe Ratio: 1.2525220249085445, Cumulative PnL: 10.578342137267978, Win Rate (%): 32.0, Profit/Loss Ratio: 5.0000000000000036\n"
      ]
     }
    ],
@@ -7752,7 +7717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -7761,7 +7726,7 @@
      "text": [
       "\n",
       "Best Combination for Winrate & Sharpe Ratio:\n",
-      "Profit Cap: 1.0, Loss Cap: -3.200000000000002, Sharpe Ratio: -4.557687569566559, Cumulative PnL: -25.118409355987207, Win Rate (%): 58.490566037735846, Profit/Loss Ratio: 0.31249999999999983\n"
+      "Profit Cap: 1.5000000000000004, Loss Cap: -2.100000000000001, Sharpe Ratio: 1.3520369531424221, Cumulative PnL: 7.952319472331595, Win Rate (%): 62.0, Profit/Loss Ratio: 0.7142857142857142\n"
      ]
     }
    ],
@@ -7776,7 +7741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -7810,203 +7775,140 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.2</td>\n",
-       "      <td>-4.557688</td>\n",
-       "      <td>-25.118409</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.312500</td>\n",
+       "      <th>216</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>-2.1</td>\n",
+       "      <td>1.352037</td>\n",
+       "      <td>7.952319</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.3</td>\n",
-       "      <td>-4.637211</td>\n",
-       "      <td>-26.018409</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.303030</td>\n",
+       "      <th>212</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>-1.7</td>\n",
+       "      <td>1.318525</td>\n",
+       "      <td>7.248350</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0.882353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.4</td>\n",
-       "      <td>-4.713237</td>\n",
-       "      <td>-26.918409</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.294118</td>\n",
+       "      <th>1100</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>1.185257</td>\n",
+       "      <td>10.465095</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.818182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>-4.776888</td>\n",
-       "      <td>-27.706693</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.285714</td>\n",
+       "      <th>1101</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>-4.5</td>\n",
+       "      <td>1.157015</td>\n",
+       "      <td>10.265095</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.6</td>\n",
-       "      <td>-4.794701</td>\n",
-       "      <td>-28.082781</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.277778</td>\n",
+       "      <th>1102</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>-4.6</td>\n",
+       "      <td>1.128882</td>\n",
+       "      <td>10.065095</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.782609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.7</td>\n",
-       "      <td>-4.846897</td>\n",
-       "      <td>-28.782781</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.270270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.8</td>\n",
-       "      <td>-4.857077</td>\n",
-       "      <td>-28.966995</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.263158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.9</td>\n",
-       "      <td>-5.072163</td>\n",
-       "      <td>-30.752209</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.256410</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-5.097479</td>\n",
-       "      <td>-31.152209</td>\n",
-       "      <td>58.490566</td>\n",
-       "      <td>0.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-3.1</td>\n",
-       "      <td>-5.108722</td>\n",
-       "      <td>-28.308409</td>\n",
-       "      <td>56.603774</td>\n",
-       "      <td>0.322581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-4.7</td>\n",
-       "      <td>-5.667589</td>\n",
-       "      <td>-35.228974</td>\n",
-       "      <td>56.603774</td>\n",
-       "      <td>0.212766</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-4.8</td>\n",
-       "      <td>-5.670730</td>\n",
-       "      <td>-35.328974</td>\n",
-       "      <td>56.603774</td>\n",
+       "      <td>-4.855169</td>\n",
+       "      <td>-27.281041</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0.208333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-4.9</td>\n",
-       "      <td>-5.673596</td>\n",
-       "      <td>-35.428974</td>\n",
-       "      <td>56.603774</td>\n",
+       "      <td>-4.859559</td>\n",
+       "      <td>-27.381041</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0.204082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-5.0</td>\n",
-       "      <td>-5.676188</td>\n",
-       "      <td>-35.528974</td>\n",
-       "      <td>56.603774</td>\n",
+       "      <td>-4.863676</td>\n",
+       "      <td>-27.481041</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-4.1</td>\n",
-       "      <td>-5.696088</td>\n",
-       "      <td>-35.510026</td>\n",
-       "      <td>56.603774</td>\n",
+       "      <td>-4.913212</td>\n",
+       "      <td>-27.734711</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0.243902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-4.3</td>\n",
-       "      <td>-5.710584</td>\n",
-       "      <td>-35.820001</td>\n",
-       "      <td>56.603774</td>\n",
-       "      <td>0.232558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-4.2</td>\n",
-       "      <td>-5.710959</td>\n",
-       "      <td>-35.810026</td>\n",
-       "      <td>56.603774</td>\n",
+       "      <td>-4.932234</td>\n",
+       "      <td>-28.034711</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>0.238095</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>222 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
-       "22         1.0      -3.2     -4.557688      -25.118409     58.490566   \n",
-       "23         1.0      -3.3     -4.637211      -26.018409     58.490566   \n",
-       "24         1.0      -3.4     -4.713237      -26.918409     58.490566   \n",
-       "25         1.0      -3.5     -4.776888      -27.706693     58.490566   \n",
-       "26         1.0      -3.6     -4.794701      -28.082781     58.490566   \n",
-       "27         1.0      -3.7     -4.846897      -28.782781     58.490566   \n",
-       "28         1.0      -3.8     -4.857077      -28.966995     58.490566   \n",
-       "29         1.0      -3.9     -5.072163      -30.752209     58.490566   \n",
-       "30         1.0      -4.0     -5.097479      -31.152209     58.490566   \n",
-       "21         1.0      -3.1     -5.108722      -28.308409     56.603774   \n",
-       "37         1.0      -4.7     -5.667589      -35.228974     56.603774   \n",
-       "38         1.0      -4.8     -5.670730      -35.328974     56.603774   \n",
-       "39         1.0      -4.9     -5.673596      -35.428974     56.603774   \n",
-       "40         1.0      -5.0     -5.676188      -35.528974     56.603774   \n",
-       "31         1.0      -4.1     -5.696088      -35.510026     56.603774   \n",
-       "33         1.0      -4.3     -5.710584      -35.820001     56.603774   \n",
-       "32         1.0      -4.2     -5.710959      -35.810026     56.603774   \n",
+       "      Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
+       "216          1.5      -2.1      1.352037        7.952319          62.0   \n",
+       "212          1.5      -1.7      1.318525        7.248350          58.0   \n",
+       "1100         3.6      -4.4      1.185257       10.465095          56.0   \n",
+       "1101         3.6      -4.5      1.157015       10.265095          56.0   \n",
+       "1102         3.6      -4.6      1.128882       10.065095          56.0   \n",
+       "...          ...       ...           ...             ...           ...   \n",
+       "38           1.0      -4.8     -4.855169      -27.281041          58.0   \n",
+       "39           1.0      -4.9     -4.859559      -27.381041          58.0   \n",
+       "40           1.0      -5.0     -4.863676      -27.481041          58.0   \n",
+       "31           1.0      -4.1     -4.913212      -27.734711          58.0   \n",
+       "32           1.0      -4.2     -4.932234      -28.034711          58.0   \n",
        "\n",
-       "    Profit/Loss Ratio  \n",
-       "22           0.312500  \n",
-       "23           0.303030  \n",
-       "24           0.294118  \n",
-       "25           0.285714  \n",
-       "26           0.277778  \n",
-       "27           0.270270  \n",
-       "28           0.263158  \n",
-       "29           0.256410  \n",
-       "30           0.250000  \n",
-       "21           0.322581  \n",
-       "37           0.212766  \n",
-       "38           0.208333  \n",
-       "39           0.204082  \n",
-       "40           0.200000  \n",
-       "31           0.243902  \n",
-       "33           0.232558  \n",
-       "32           0.238095  "
+       "      Profit/Loss Ratio  \n",
+       "216            0.714286  \n",
+       "212            0.882353  \n",
+       "1100           0.818182  \n",
+       "1101           0.800000  \n",
+       "1102           0.782609  \n",
+       "...                 ...  \n",
+       "38             0.208333  \n",
+       "39             0.204082  \n",
+       "40             0.200000  \n",
+       "31             0.243902  \n",
+       "32             0.238095  \n",
+       "\n",
+       "[222 rows x 6 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
