--- a/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
+++ b/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
@@ -7584,9 +7584,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results DataFrame:\n",
+      "      Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
+      "1446         4.5      -2.1      0.963834       10.179614     39.622642   \n",
+      "1445         4.5      -2.0      0.856615        9.159027     37.735849   \n",
+      "1405         4.4      -2.1      0.766183        8.173376     37.735849   \n",
+      "1447         4.5      -2.2      0.765113        8.356969     39.622642   \n",
+      "1323         4.2      -2.1      0.709893        7.556415     37.735849   \n",
+      "...          ...       ...           ...             ...           ...   \n",
+      "159          1.3      -4.6     -6.867292      -45.719925     45.283019   \n",
+      "160          1.3      -4.7     -6.872144      -45.929925     45.283019   \n",
+      "161          1.3      -4.8     -6.876199      -46.129925     45.283019   \n",
+      "162          1.3      -4.9     -6.879715      -46.329925     45.283019   \n",
+      "163          1.3      -5.0     -6.882704      -46.529925     45.283019   \n",
+      "\n",
+      "      Profit/Loss Ratio  \n",
+      "1446           2.142857  \n",
+      "1445           2.250000  \n",
+      "1405           2.095238  \n",
+      "1447           2.045455  \n",
+      "1323           2.000000  \n",
+      "...                 ...  \n",
+      "159            0.282609  \n",
+      "160            0.276596  \n",
+      "161            0.270833  \n",
+      "162            0.265306  \n",
+      "163            0.260000  \n",
+      "\n",
+      "[1681 rows x 6 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
