--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -3938,6 +3938,102 @@
     "\n",
     "    return suggested_action, reversal_open, early_close, reopen, opened_position"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up_trend_last = np.nan\n",
+    "up_trend_second_last = 201.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trend: unchange\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prev Logic\n",
+    "if pd.isna(up_trend_last) and pd.isna(up_trend_second_last):\n",
+    "    trend = 'unchange'\n",
+    "elif isinstance(up_trend_last, float) and isinstance(up_trend_second_last, float):\n",
+    "    trend = 'unchange'\n",
+    "else:\n",
+    "    trend = 'change'\n",
+    "    active_pos = 0\n",
+    "    print(f\"Active Position: {active_pos} - Reset!\")\n",
+    "\n",
+    "print(f\"Trend: {trend}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Active Position: 0 - Reset!\n",
+      "Trend: change\n"
+     ]
+    }
+   ],
+   "source": [
+    "# New Logic\n",
+    "if pd.isna(up_trend_last) and pd.isna(up_trend_second_last):\n",
+    "    trend = 'unchange'\n",
+    "elif not pd.isna(up_trend_last) and not pd.isna(up_trend_second_last):\n",
+    "    trend = 'unchange'\n",
+    "else:\n",
+    "    trend = 'change'\n",
+    "    active_pos = 0\n",
+    "    print(f\"Active Position: {active_pos} - Reset!\")\n",
+    "\n",
+    "print(f\"Trend: {trend}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
