--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2711,8 +2711,8 @@
     "        ).hexdigest()\n",
     "\n",
     "    def _send_request(\n",
-    "        self, method: str, endpoint: str, params: dict = None, signed: bool = False\n",
-    "    ) -> dict:\n",
+    "    self, method: str, endpoint: str, params: dict = None, signed: bool = False\n",
+    ") -> dict:\n",
     "        \"\"\"Send request to Binance FAPI\"\"\"\n",
     "        url = f\"{self.base_url}{endpoint}\"\n",
     "        headers = {\"X-MBX-APIKEY\": self.api_key}\n",
@@ -2739,6 +2739,7 @@
     "\n",
     "        except requests.exceptions.RequestException as e:\n",
     "            logging.error(f\"API request failed: {e}\")\n",
+    "            logging.error(f\"Response: {e.response.text}\")  # Log the response for debugging\n",
     "            return None\n",
     "\n",
     "    def get_mark_price(self, symbol: str) -> dict:\n",
@@ -2773,8 +2774,9 @@
     "        # Get tick size for stopPrice\n",
     "        tick_size = float(next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]))[\"tickSize\"])\n",
     "\n",
-    "        # Format stopPrice to adhere to tick size\n",
+    "        # Format stopPrice to adhere to tick size and round to 2 decimal places\n",
     "        formatted_take_profit_price = round(take_profit_price / tick_size) * tick_size\n",
+    "        formatted_take_profit_price = round(formatted_take_profit_price, 2)  # Round to 2 decimal places\n",
     "\n",
     "        order_type = \"TAKE_PROFIT_MARKET\"\n",
     "        params = {\n",
@@ -2786,6 +2788,8 @@
     "            \"workingType\": \"MARK_PRICE\",  # Use mark price for stopPrice\n",
     "            \"priceProtect\": True  # Enable price protection\n",
     "        }\n",
+    "\n",
+    "        logging.info(f\"Creating take-profit order with params: {params}\")\n",
     "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
     "\n",
     "    def create_stop_loss_order(self, symbol: str, side: str, stop_loss_price: float) -> dict:\n",
@@ -2798,8 +2802,9 @@
     "        # Get tick size for stopPrice\n",
     "        tick_size = float(next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]))[\"tickSize\"])\n",
     "\n",
-    "        # Format stopPrice to adhere to tick size\n",
+    "        # Format stopPrice to adhere to tick size and round to 2 decimal places\n",
     "        formatted_stop_loss_price = round(stop_loss_price / tick_size) * tick_size\n",
+    "        formatted_stop_loss_price = round(formatted_stop_loss_price, 2)  # Round to 2 decimal places\n",
     "\n",
     "        order_type = \"STOP_MARKET\"\n",
     "        params = {\n",
@@ -2811,6 +2816,8 @@
     "            \"workingType\": \"MARK_PRICE\",  # Use mark price for stopPrice\n",
     "            \"priceProtect\": True  # Enable price protection\n",
     "        }\n",
+    "\n",
+    "        logging.info(f\"Creating stop-loss order with params: {params}\")\n",
     "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
     "\n",
     "    def create_order(\n",
@@ -2875,7 +2882,7 @@
     "                    logging.error(\"Failed to create take-profit order.\")\n",
     "\n",
     "            if stop_loss_percentage:\n",
-    "                stop_loss_price = mark_price * (1 - stop_loss_percentage / 100) if side == \"BUY\" else mark_price * (1 + stop_loss_percentage / 100)\n",
+    "                stop_loss_price = mark_price * (1 + stop_loss_percentage / 100) if side == \"BUY\" else mark_price * (1 - stop_loss_percentage / 100)\n",
     "                sl_response = self.create_stop_loss_order(symbol, side, stop_loss_price)\n",
     "                if sl_response:\n",
     "                    logging.info(f\"Stop-loss order created: {sl_response}\")\n",
@@ -2930,8 +2937,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2945,7 +2957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2953,7 +2965,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1737715876588}\n"
+      "Server Time: {'serverTime': 1737868977014}\n"
      ]
     }
    ],
@@ -2969,14 +2981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24579.44284834', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24815.06170386', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '34.33022472', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.94978194', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22490881', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24864.58350421', 'crossWalletBalance': '24864.58350421', 'crossUnPnl': '0.02351600', 'availableBalance': '24837.39307025', 'maxWithdrawAmount': '24837.39307025', 'marginAvailable': True, 'updateTime': 1737715733580}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24836.87676220', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24162.77258759', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24399.27801032', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '33.71882537', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.95843646', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22141907', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24863.69203081', 'crossWalletBalance': '24863.69203081', 'crossUnPnl': '-2.28000000', 'availableBalance': '24421.23514056', 'maxWithdrawAmount': '24421.23514056', 'marginAvailable': True, 'updateTime': 1737868527018}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24416.40499053', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -2991,28 +3003,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Long Order Response: {'orderId': 17311909844, 'symbol': 'SUIUSDT', 'status': 'NEW', 'clientOrderId': 'ImD2CWosqYmzmcU3BXDWtQ', 'price': '0.000000', 'avgPrice': '0.00', 'origQty': '5.0', 'executedQty': '0.0', 'cumQty': '0.0', 'cumQuote': '0.0000000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'BUY', 'positionSide': 'BOTH', 'stopPrice': '0.000000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1737715884970}\n"
+      "Order Response: {'orderId': 94669345602, 'symbol': 'SOLUSDT', 'status': 'NEW', 'clientOrderId': '3fRq0tAQQJnppdubEEWj4S', 'price': '0.0000', 'avgPrice': '0.00', 'origQty': '1', 'executedQty': '0', 'cumQty': '0', 'cumQuote': '0.0000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'SELL', 'positionSide': 'BOTH', 'stopPrice': '0.0000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1737869849753}\n"
      ]
     }
    ],
    "source": [
-    "# Open a long position with TP and SL\n",
-    "long_order_response = binance_api.create_order(\n",
-    "    symbol=\"SUIUSDT\",    # Trading pair\n",
-    "    side=\"BUY\",          # Buy to open a long position\n",
-    "    order_type=\"MARKET\", # Market order for instant execution\n",
-    "    quantity=5,          # Valid quantity in SUI (base asset)\n",
-    "    take_profit_percentage=2,  # 2% take-profit\n",
-    "    stop_loss_percentage=2     # 2% stop-loss\n",
-    ")\n",
-    "print(\"Long Order Response:\", long_order_response)"
+    "order_response = binance_api.create_order('SOLUSDT', \"SELL\", \"MARKET\", 1,take_profit_percentage= 2, stop_loss_percentage= -1.5)\n",
+    "print(\"Order Response:\", order_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch position risk information\n",
+    "position_risk = binance_api.get_position_risk('SOLUSDT')\n",
+    "\n",
+    "position_amt = float(position_risk[0]['positionAmt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "close_position_coin_amount = float(binance_api.get_position_risk('SOLUSDT')[0]['positionAmt'])\n",
+    "print(close_position_coin_amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'orderId': 94669439411, 'symbol': 'SOLUSDT', 'status': 'NEW', 'clientOrderId': 'nyIBjmjxsItJsy1fAdPEVv', 'price': '0.0000', 'avgPrice': '0.00', 'origQty': '1', 'executedQty': '0', 'cumQty': '0', 'cumQuote': '0.0000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'BUY', 'positionSide': 'BOTH', 'stopPrice': '0.0000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1737869884620}\n"
+     ]
+    }
+   ],
+   "source": [
+    "close = binance_api.create_order('SOLUSDT', \"BUY\", \"MARKET\", -close_position_coin_amount)\n",
+    "print(close)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m close_position_coin_amount \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[43mbinance_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_position_risk\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSOLUSDT\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpositionAmt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCurrent Opened \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSOLUSDT\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Amount: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mclose_position_coin_amount\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "close_position_coin_amount = float(binance_api.get_position_risk('SOLUSDT').get('positionAmt', 0))\n",
+    "print(f'Current Opened {'SOLUSDT'} Amount: {close_position_coin_amount}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Current Opened {'SOLUSDT'} Amount: {close_position_coin_amount}')"
    ]
   },
   {
@@ -3338,6 +3421,13 @@
     "gpr = binance_api.get_position_risk(symbol='SOLUSDT')\n",
     "print(gpr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4038,9 +4128,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (my-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "my-venv"
   },
   "language_info": {
    "codemirror_mode": {
