--- a/06_trades_and_orderbooks/01_read_ob_and_clean.ipynb
+++ b/06_trades_and_orderbooks/01_read_ob_and_clean.ipynb
@@ -2,29 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping malformed line: {\"topic\":\"orderbook.500.ETHUSDT\",\"type\":\"delta\",\"ts\":1738043314603,\"data\":{\"s\":\"ETHUSDT\",\"b\":[[\"3220.41\",\"0\"],[\"3220.40\",\"0\"],[\"3220.37\",\"0\"],[\"3220.36\",\"0\"],[\"3220.34\",\"0\"],[\"3220.30\",\"0\"],[\"3220.27\",\"0\"],[\"3220.25\",\"0\"],[\"3220.24\",\"0\"],[\"3220.22\",\"0\"],[\"3220.21\",\"0\"],[\"3220.20\",\"0\"],[\"3220.18\",\"0\"],[\"3220.15\",\"30.08\"],[\"3220.12\",\"0.79\"],[\"3220.11\",\"9.75\"],[\"3220.08\",\"0.46\"],[\"3220.07\",\"0.31\"],[\"3220.06\",\"0.06\"],[\"3219.98\",\"5.40\"],[\"3219.90\",\"3.70\"],[\"3219.88\",\"0.41\"],[\"3219.87\",\"1.98\"],[\"3219.86\",\"0.20\"],[\"3219.81\",\"1.05\"],[\"3219.78\",\"0\"],[\"3219.77\",\"0.01\"],[\"3219.76\",\"13.17\"],[\"3219.73\",\"0.01\"],[\"3219.72\",\"0\"],[\"3219.67\",\"22.54\"],[\"3219.66\",\"1.63\"],[\"3219.62\",\"0\"],[\"3219.61\",\"1.13\"],[\"3219.60\",\"13.87\"],[\"3219.54\",\"0.03\"],[\"3219.53\",\"12.49\"],[\"3219.51\",\"3.89\"],[\"3219.50\",\"0.02\"],[\"3219.44\",\"0.34\"],[\"3219.41\",\"0\"],[\"3219.40\",\"12.28\"],[\"3219.39\",\"2.63\"],[\"3219.38\",\"5.18\"],[\"3219.36\",\"37.97\"],[\"3219.33\",\"9.93\"],[\"3219.30\",\"2.24\"],[\"3219.29\",\"13.99\"],[\"3219.26\",\"2.56\"],[\"3219.24\",\"0\"],[\"3219.23\",\"22.56\"],[\"3219.22\",\"19.04\"],[\"3219.20\",\"1.92\"],[\"3219.18\",\"31.38\"],[\"3219.17\",\"19.68\"],[\"3219.13\",\"0.78\"],[\"3219.11\",\"0.02\"],[\"3219.10\",\"16.95\"],[\"3219.07\",\"26.20\"],[\"3219.05\",\"0.02\"],[\"3219.03\",\"10.44\"],[\"3219.02\",\"0\"],[\"3219.01\",\"3.16\"],[\"3219.00\",\"11.39\"],[\"3218.99\",\"0.02\"],[\"3218.98\",\"8.34\"],[\"3218.97\",\"8.15\"],[\"3218.96\",\"11.50\"],[\"3218.95\",\"5.47\"],[\"3218.94\",\"12.26\"],[\"3218.93\",\"12.27\"],[\"3218.91\",\"15.19\"],[\"3218.86\",\"0.02\"],[\"3218.80\",\"0.02\"],[\"3218.79\",\"5.61\"],[\"3218.77\",\"7.22\"],[\"3218.73\",\"13.54\"],[\"3218.72\",\"7.68\"],[\"3218.71\",\"24.30\"],[\"3218.67\",\"28.27\"],[\"3218.60\",\"0.04\"],[\"3218.58\",\"0.31\"],[\"3218.56\",\"11.93\"],[\"3218.54\",\"0.01\"],[\"3218.53\",\"0.30\"],[\"3218.52\",\"1.86\"],[\"3218.48\",\"16.21\"],[\"3218.47\",\"8.88\"],[\"3218.43\",\"8.64\"],[\"3218.39\",\"7.43\"],[\"3218.36\",\"9.94\"],[\"3218.30\",\"3.48\"],[\"3218.22\",\"12.92\"],[\"3218.19\",\"5.53\"],[\"3218.15\",\"20.77\"],[\"3218.11\",\"7.29\"],[\"3218.07\",\"5.46\"],[\"3218.04\",\"0.01\"],[\"3218.03\",\"15.21\"],[\"3218.02\",\"4.15\"],[\"3217.85\",\"0\"],[\"3217.84\",\"0.95\"],[\"3217.77\",\"0\"],[\"3217.74\",\"1.58\"],[\"3217.70\",\"9.77\"],[\"3217.66\",\"80.73\"],[\"3217.57\",\"0.30\"],[\"3217.42\",\"0\"],[\"3217.28\",\"19.50\"],[\"3217.15\",\"0.67\"],[\"3216.82\",\"12.22\"],[\"3216.65\",\"1.20\"],[\"3216.29\",\"10.83\"],[\"3214.67\",\"0.55\"],[\"3214.60\",\"0.60\"],[\"3214.47\",\"4.00\"],[\"3214.28\",\"1.03\"],[\"3214.24\",\"11.69\"],[\"3214.20\",\"0.02\"],[\"3214.19\",\"31.06\"],[\"3214.18\",\"0.60\"],[\"3214.17\",\"1.32\"],[\"3214.16\",\"0.32\"],[\"3214.14\",\"5.65\"],[\"3214.13\",\"2.49\"],[\"3214.12\",\"0.07\"],[\"3214.10\",\"1.64\"],[\"3214.09\",\"0.34\"],[\"3214.08\",\"5.33\"],[\"3214.07\",\"4.03\"]],\"a\":[[\"3220.16\",\"47.93\"],[\"3220.17\",\"0.51\"],[\"3220.19\",\"13.82\"],[\"3220.20\",\"2.15\"],[\"3220.21\",\"0.26\"],[\"3220.22\",\"77.69\"],[\"3220.25\",\"3.29\"],[\"3220.26\",\"1.40\"],[\"3220.28\",\"1.07\"],[\"3220.29\",\"0.62\"],[\"3220.30\",\"2.15\"],[\"3220.31\",\"2.84\"],[\"3220.33\",\"0.01\"],[\"3220.34\",\"6.36\"],[\"3220.35\",\"6.00\"],[\"3220.36\",\"0.01\"],[\"3220.38\",\"1.73\"],[\"3220.39\",\"0.01\"],[\"3220.40\",\"2.77\"],[\"3220.41\",\"5.22\"],[\"3220.42\",\"1.44\"],[\"3220.44\",\"1.58\"],[\"3220.47\",\"0\"],[\"3220.50\",\"9.38\"],[\"3220.51\",\"9.61\"],[\"3220.52\",\"0.01\"],[\"3220.58\",\"10.17\"],[\"3220.64\",\"0.01\"],[\"3220.65\",\"1.53\"],[\"3220.66\",\"0.01\"],[\"3220.67\",\"12.48\"],[\"3220.68\",\"0.01\"],[\"3220.70\",\"10.69\"],[\"3220.71\",\"9.77\"],[\"3220.73\",\"0\"],[\"3220.74\",\"10.81\"],[\"3220.75\",\"11.68\"],[\"3220.76\",\"1.60\"],[\"3220.79\",\"0.03\"],[\"3220.80\",\"2.77\"],[\"3220.81\",\"0.02\"],[\"3220.82\",\"0.01\"],[\"3220.83\",\"6.00\"],[\"3220.86\",\"31.48\"],[\"3220.89\",\"31.08\"],[\"3220.90\",\"12.77\"],[\"3220.91\",\"0\"],[\"3220.93\",\"3.11\"],[\"3220.94\",\"11.66\"],[\"3220.95\",\"11.66\"],[\"3220.96\",\"5.17\"],[\"3220.97\",\"0\"],[\"3220.99\",\"17.40\"],[\"3221.00\",\"8.09\"],[\"3221.03\",\"6.26\"],[\"3221.06\",\"30.70\"],[\"3221.10\",\"3.25\"],[\"3221.11\",\"3.48\"],[\"3221.13\",\"9.42\"],[\"3221.16\",\"1.74\"],[\"3221.18\",\"0\"],[\"3221.19\",\"0.26\"],[\"3221.20\",\"23.05\"],[\"3221.21\",\"10.34\"],[\"3221.22\",\"3.17\"],[\"3221.23\",\"6.85\"],[\"3221.24\",\"0.98\"],[\"3221.25\",\"7.73\"],[\"3221.26\",\"1.59\"],[\"3221.27\",\"9.97\"],[\"3221.29\",\"20.94\"],[\"3221.31\",\"15.74\"],[\"3221.35\",\"0.02\"],[\"3221.39\",\"18.12\"],[\"3221.44\",\"7.78\"],[\"3221.45\",\"62.09\"],[\"3221.46\",\"0\"],[\"3221.50\",\"0.44\"],[\"3221.51\",\"0.69\"],[\"3221.53\",\"3.13\"],[\"3221.54\",\"1.47\"],[\"3221.56\",\"7.12\"],[\"3221 | Error: Unterminated string starting at: line 1 column 4101 (char 4100)\n",
-      "Bids DataFrame:\n",
-      "  bid_price bid_size   symbol      timestamp\n",
-      "0   3181.17    58.49  ETHUSDT  1738022401901\n",
-      "1   3181.11     0.01  ETHUSDT  1738022401901\n",
-      "2   3181.10     1.44  ETHUSDT  1738022401901\n",
-      "3   3181.08     0.01  ETHUSDT  1738022401901\n",
-      "4   3181.05     1.10  ETHUSDT  1738022401901\n",
-      "\n",
-      "Asks DataFrame:\n",
-      "  ask_price ask_size   symbol      timestamp\n",
-      "0   3181.18    21.76  ETHUSDT  1738022401901\n",
-      "1   3181.23     0.01  ETHUSDT  1738022401901\n",
-      "2   3181.29     1.35  ETHUSDT  1738022401901\n",
-      "3   3181.30     1.44  ETHUSDT  1738022401901\n",
-      "4   3181.32     0.01  ETHUSDT  1738022401901\n"
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0x8b in position 1: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Step 1: Read the file line by line and parse JSON\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m---> 12\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mline\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfile\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mtry\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;66;43;03m# Parse each line as JSON\u001b[39;49;00m\n\u001b[1;32m     15\u001b[0m \u001b[43m            \u001b[49m\u001b[43mdata_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<frozen codecs>:322\u001b[0m, in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x8b in position 1: invalid start byte"
      ]
     }
    ],
@@ -33,7 +23,7 @@
     "import json\n",
     "\n",
     "# Path to your .data file\n",
-    "file_path = \"/home/ubuntu/Rheza/local-share/06_trades_and_orderbooks/2025-01-28_ETHUSDT_ob500.data\"\n",
+    "file_path = \"/home/ubuntu/Rheza/local-share/06_trades_and_orderbooks/BTCUSDT2025-01-11.csv.gz\"\n",
     "\n",
     "# Initialize a list to store valid JSON rows\n",
     "data_list = []\n",
@@ -76,6 +66,26 @@
     "\n",
     "print(\"\\nAsks DataFrame:\")\n",
     "print(asks_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_list"
    ]
   },
   {
